tests/valid/function/generic_bound_def.facet
trait Show;

fn keep<T>(x: affine T) -> affine T where T: Show {
  x
}

