tests/invalid/trait/bound_trait_arg_missing.facet
trait Convert<T>;

struct Box<T> where T: Convert {
  value: affine T
}

fn main() -> unrestricted () {
  ()
}
